# ccserver

./: .env.example  .gitignore  CHANGELOG.md  Justfile  LICENSE  README.md  README_EN.md  pyproject.toml  requirements.txt  server.py  skills-lock.json  tui.py
ccserver/: __init__.py  agent.py  agent_bus.py  agent_handle.py  agent_registry.py  agent_scheduler.py  compactor.py  config.py  event_bus.py  factory.py  log.py  main.py  monitor.py  outbound_bus.py  prompt_engine.py  recorder.py  session.py  settings.py  task_manager.py
ccserver/agent/: __init__.py  command_registry.py  compact_coordinator.py  limit_policy.py  llm_caller.py  message_builder.py  runtime.py  spawn_manager.py  team_coordinator.py  tool_dispatcher.py
ccserver/agents/: loader.py
ccserver/builtins/: __init__.py
ccserver/channels/: __init__.py  base.py  (+10 more)
clients/: gui.py  tui_http.py
docs/: hooks.md
drama_engine/: README.md  __init__.py  cli.py  run_script.py
plan/: agent_ecosystem_architecture.md  agent_ecosystem_implementation_plan.md  agent_team_core_implementation_plan.md  task_manager_improvement.md
prompt_library/: adapter.py
tests/: test_agent_bus.py  test_agent_handle.py  test_agent_handle_tools.py  test_agent_loader.py  test_agent_package.py  test_agent_prompt_lib.py  test_agent_runner_cache.py  test_agent_task.py  test_agent_task_progress.py  test_agent_tasks_api.py  test_aimodels_facade.py  test_anthropic_adapter.py  test_anthropic_codec.py  test_anthropic_provider.py  test_anthropic_sdk_adapter.py  test_background_agent.py  test_bash_shell_task_integration.py  test_bt_base.py  test_bt_bash.py  test_bt_file_tools.py  test_bt_task_tools.py  test_bus_emitter_visibility.py  test_chat_completions_adapter.py  test_chat_completions_codec.py  test_command_registry.py  test_compact_full_l1.py  test_compactor.py  test_compactor_lib.py  test_config_doc_sync.py  test_config_env_map.py  test_config_loader.py  test_config_permissions.py  test_config_project_dir.py  test_config_schema.py  test_cron_execution_policy.py  test_cron_scheduler.py  test_describe_l1.py  test_event_bus.py  test_event_bus_replay.py  test_factory.py  (+42 more)
trace_docs/: agent_ecosystem_roadmap.md  agent_god_class_split_design_2026_06_09.md  agent_lifecycle_analysis.md  agent_loop_deep_dive.md  agent_loop_issues_2026_04_23.md  agent_loop_streaming_analysis.md  agent_teams_gap_analysis.md  agent_teams_gap_analysis_detailed.md  design_principles_audit_2026_06_09.md  eventbus_refactor_design_2026_04_23.md  llm_provider_compatibility_design.md  sdk_optimization.md
web/: chat.html  index.html
(+884 files in other folders)
